2011-03-28  Jeff Miller  <jeffm@apple.com>

Reviewed by Adam Roben.

        ResourceError::certificate() should return a PCCERT_CONTEXT
        https://bugs.webkit.org/show_bug.cgi?id=57262

        * platform/network/cf/ResourceError.h: certificate() now returns a PCCERT_CONTEXT.
        * platform/network/cf/ResourceErrorCF.cpp:
        (WebCore::ResourceError::certificate): Added.
2011-03-28  Jeff Miller  <jeffm@apple.com>

        Reviewed by Adam Roben.

        ResourceError::certificate() should return a PCCERT_CONTEXT
        https://bugs.webkit.org/show_bug.cgi?id=57262

        * Shared/win/PlatformCertificateInfo.cpp:
        (WebKit::PlatformCertificateInfo::PlatformCertificateInfo): Don't assert if no PCCERT_CONTEXT is specified.
        * Shared/win/WebCoreArgumentCodersWin.cpp:
        (CoreIPC::encodeResourceError): Removed unneeded code now that ResourceError::certificate() returns a PCCERT_CONTEXT.


Canonical link: https://commits.webkit.org/71948@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@82146 268f45cc-cd09-0410-ab3c-d52691b4dbfc